# -Machine-Learning-Shader-Prediction-Compiler

./: .gitignore  =1.3.7  CLAUDE.md  CLEANUP_REPORT.md  Cyberpunk 2077_performance.json  DEPENDENCY_FIX_REPORT.md  DEPENDENCY_IMPROVEMENTS.md  DEPENDENCY_RESOLUTION_REPORT.md  DEPLOYMENT_AUTOMATION_SUMMARY.md  DEPLOYMENT_SUMMARY.md  ENHANCED_CACHE_SYSTEM_SUMMARY.md  ENHANCED_DEPENDENCY_SYSTEM_SUMMARY.md  FIXES_APPLIED.md  FLATPAK_STEAMDECK_GUIDE.md  FOSSILIZE_FIXES_SUMMARY.md  INSTALLATION_GUIDE.md  INSTALLATION_METHODS.md  INSTALL_SCRIPT_FIXES.md  LICENSE  OLED_OPTIMIZATIONS_SUMMARY.md  OPTIMIZATION_REPORT.md  PGP_FIX_SUMMARY.md  PHASE1_OPTIMIZATION_SUMMARY.md  PROJECT_ANALYSIS_REPORT.md  PURE_PYTHON_ARCHITECTURE.md  README-THERMAL-FIX.md  README.md  README_COMPREHENSIVE.md  SECURITY.md  STEAMDECK-DEPLOYMENT-SUMMARY.md  STEAMDECK-TROUBLESHOOTING-GUIDE.md  STEAM_DECK_FIX_GUIDE.md  STEAM_DECK_INSTALLATION_GUIDE.md  STEAM_DECK_OPTIMIZATIONS.md  STEAM_DECK_QA_FINAL_REPORT.md  STEAM_DECK_SETUP.md  TROUBLESHOOTING_PGP.md  activate_steam_deck.sh  build-flatpak.sh  build_rust_components.sh  (+61 more)
-Machine-Learning-Shader-Prediction-Compiler-main/: install.sh
-Machine-Learning-Shader-Prediction-Compiler-main/p2p/: p2p_demonstration.py  p2p_shader_distribution.py
-Machine-Learning-Shader-Prediction-Compiler-main/src/: shader_prediction_system.py  shader_training_evaluation.py  steam_deck_hardware.py  usage_example.py
config/: steamdeck_lcd_config.json  steamdeck_oled_config.json
docs/: API.md  ARCHITECTURE.md  BENCHMARKS.md  CONTRIBUTING.md  INSTALLATION.md  ML_MODELS.md  STEAMDECK.md  THERMAL.md
examples/: basic_usage.py  example_threading_usage.py  run_steamdeck_tests.py  steamdeck_performance_validation.py  test_oled_optimizations.py  test_threading_fixes.py  validate_oled_simple.py  validate_steamdeck_tests.py
p2p/: P2P_SHADER_SYSTEM_README.md  p2p_bandwidth_optimizer.py  p2p_dht_system.py  p2p_shader_distribution.py  p2p_shader_network.py
packaging/flatpak/: com.shaderpredict.MLCompiler.metainfo.xml  com.shaderpredict.MLCompiler.yml
packaging/systemd/: ml-shader-predictor-maintenance.service  ml-shader-predictor-maintenance.timer  ml-shader-predictor-thermal.service  ml-shader-predictor.service
reports/: COMPREHENSIVE_VALIDATION_REPORT.md  STEAMDECK_INTEGRATION_TESTS_SUMMARY.md  THREADING_FIXES_SUMMARY.md
rust-core/: Cargo.toml
rust-core/ml-engine/: Cargo.toml
rust-core/ml-engine/src/: cache.rs  features.rs  heuristic.rs  inference.rs  lib.rs  predictor.rs  quantization.rs  telemetry.rs
rust-core/p2p-network/: Cargo.toml
rust-core/p2p-network/src/: bandwidth.rs  crypto.rs  dht.rs  lib.rs  reputation.rs  transport.rs
rust-core/python-bindings/: Cargo.toml
rust-core/python-bindings/src/: lib.rs
rust-core/security-analyzer/: Cargo.toml
rust-core/security-analyzer/src/: fingerprint.rs  lib.rs  sandbox.rs  spirv_analyzer.rs  validator.rs
rust-core/steamdeck-optimizer/: Cargo.toml
rust-core/steamdeck-optimizer/src/: hardware.rs  lib.rs  monitor.rs  power.rs  scheduler.rs  thermal.rs
rust-core/system-monitor/: Cargo.toml
rust-core/system-monitor/src/: cpu_monitor.rs  gpu_monitor.rs  lib.rs  metrics.rs  power_monitor.rs  thermal_monitor.rs
rust-core/vulkan-cache/: Cargo.toml
rust-core/vulkan-cache/src/: cache.rs  lib.rs  mmap_store.rs
scripts/: final_cleanup.py  install.sh  install_fixed.sh  install_simple.sh  migrate_dependencies.py  reorganize_structure.py  uninstall.sh  update_fixed.sh  web_install.sh
security/: README_SECURITY_FRAMEWORK.md  __init__.py  access_control.py  anticheat_compatibility.py  hardware_fingerprint.py  privacy_protection.py  sandbox_executor.py  secure_installer.py  security_integration.py  security_testing.py  spv_static_analyzer.py
shader-prediction-compilation-main/: DECK_INSTALL_ONELINER.md  INSTALL.sh  ONE_LINER_COMMANDS.md  OPTIMIZATION_SUMMARY.md  README.md  deck-gui-installer.py  improved-github-download.ps1  improved-github-download.sh  install.html  one-liner-install.sh
shader-prediction-compilation-main/docs/: COMPLETE_GITHUB_FIX_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INSTALL_GUIDE.md  README_FINAL_INSTALLER.md  README_GITHUB_ISSUES.md  README_INSTALLATION.md
shader-prediction-compilation-main/shader-predict-compile/: GAMING_MODE_GUIDE.md  GETTING_STARTED.md  Makefile  README.md  auto_launcher.sh  check_dependencies.sh  check_steam_deck.sh  create_icon.py  gaming_mode_launcher.sh  install  install-manual  install_dependencies.sh  launcher.sh  requirements.txt  restore_defaults.py  setup.sh  shader-predict-compile.desktop  uninstall.sh  validate_installation.sh
src/: __init__.py  desktop_integration.py  enhanced_rust_integration.py  gaming_mode_integration.py  ml_shader_predictor_gui.py  radv_optimizer_enhanced.py  rust_integration.py  shader_prediction_system.py  shader_training_evaluation.py  steam_deck_hardware.py  steam_deck_hardware_enhanced.py  steam_deck_integration.py  thermal_manager.py
src/core/: README_ENHANCED_DEPENDENCY_SYSTEM.md  SYSTEM_OPTIMIZATION_README.md  __init__.py  comprehensive_status_system.py  dependency_coordinator.py  dependency_demo.py  dependency_health_checker.py  dependency_version_manager.py  emergency_fallback_system.py  enhanced_dbus_manager.py  enhanced_dependency_coordinator.py  enhanced_dependency_detector.py  enhanced_dependency_installer.py  enhanced_dependency_system.py  enhanced_ml_predictor.py  fallback_test_suite.py  high_performance_cache.py  initialization_controller.py  installation_validator.py  ml_only_predictor.py  oled_memory_optimizer.py  oled_steamdeck_integration.py  optimized_ml_predictor.py  optimized_shader_cache.py  pure_python_fallbacks.py  rdna2_gpu_optimizer.py  robust_threading_manager.py  runtime_dependency_manager.py  simd_optimizations.py  startup_threading.py  steam_background_service.py  steam_dbus_interface.py  steam_deck_hardware_integration.py  steam_deck_optimizer.py  (+18 more)
steam-deck-qa-framework/: DEPLOYMENT_GUIDE.md  README.md  main.py  requirements.txt
steamdeck-deployment/: README.md
tests/: README_STEAMDECK_TESTING.md
(+67 files in other folders)
