[workspace]
resolver = "2"
members = [
    "ml-engine",
    "vulkan-cache",
    "security-analyzer",
    "system-monitor",
    "python-bindings",
    "p2p-network",
    "steamdeck-optimizer"
]

[workspace.dependencies]
# Performance & SIMD
rayon = "1.8"
simd-json = "0.13"
wide = "0.7"
# packed_simd2 = { version = "0.3", optional = true }  # Deprecated, using std::simd instead

# ML/Data & ONNX
ndarray = "0.15"
ort = { version = "1.16", features = ["load-dynamic", "half"] }
candle-core = "0.4"
linfa = "0.7"
smartcore = "0.3"

# Vulkan Integration
ash = { version = "0.37", features = ["loaded", "debug"] }
gpu-allocator = { version = "0.25", features = ["vulkan"] }
spirv-reflect = "0.2"

# Compression/Serialization
lz4_flex = "0.11"
zstd = "0.13"
rmp-serde = "1.1"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Memory Management & Storage
memmap2 = "0.9"
rusqlite = { version = "0.30", features = ["bundled"] }
rocksdb = "0.21"
parking_lot = "0.12"

# Cryptography & Security  
ring = "0.17"
ed25519-dalek = "2.0"
blake3 = "1.5"
sha2 = "0.10"

# Networking & P2P
quinn = "0.10"
libp2p = { version = "0.53", features = ["kad", "quic", "noise", "yamux"] }
tokio-util = "0.7"

# System Integration
sysinfo = "0.30"
nix = "0.27"
libc = "0.2"
core_affinity = "0.8"

# Python Integration
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
numpy = "0.20"

# Concurrency & Collections
dashmap = "5.5"
crossbeam = "0.8"
lru = "0.12"

# Error handling & Logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Testing & Benchmarking
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
strip = true