[package]
name = "p2p-network" 
version = "3.0.0"
edition = "2021"
description = "P2P shader distribution network with QUIC transport"
authors = ["ML Shader Prediction Compiler Team"]

[dependencies]
# Workspace dependencies
quinn = { workspace = true }
libp2p = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
ring = { workspace = true }
ed25519-dalek = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
lru = { workspace = true }

[features]
default = ["quic-transport", "dht", "reputation"]
quic-transport = ["quinn"]
dht = ["libp2p/kad"]
reputation = []
bandwidth-optimization = []